--- a/payment.html
+++ b/payment.html
@@ -1,63 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Packages - Explore Karnataka</title>
-<style>
-body{margin:0;font-family:Arial;background:#fff8f0;}
-header{background:#3b1e54;color:white;padding:20px;text-align:center;}
-nav{display:flex;justify-content:center;gap:20px;margin-top:10px;}
-nav a{color:white;text-decoration:none;font-weight:bold;}
-.section{padding:40px;text-align:center;}
-.grid{display:flex;flex-wrap:wrap;justify-content:center;gap:20px;}
-.card{background:white;width:300px;padding:15px;border-radius:15px;box-shadow:0 0 10px #ccc;}
-.card img{width:100%;height:180px;object-fit:cover;border-radius:10px;}
-.price{font-size:1.3rem;color:green;font-weight:bold;}
-.btn{background:#3b1e54;color:white;padding:10px 20px;text-decoration:none;border-radius:5px;}
-.btn:hover{background:#532f7d;}
-footer{padding:20px;background:#222;color:white;text-align:center;margin-top:40px;}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book Your Trip - Explore Karnataka</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <style>
+        body {background: #f8fbfe; font-family:'Segoe UI', Arial, sans-serif;}
+        header {background:linear-gradient(90deg,#2388ff,#34d1bf);text-align:center; padding:2rem; color:#fff;}
+        main {display:flex;justify-content:center;}
+        .payment-box {background:#fff; border-radius:16px; box-shadow:0 4px 24px rgba(0,0,0,0.10); padding:2rem; max-width:480px; margin:2rem;}
+        h2 {color:#2388ff;}
+        form {display:flex; flex-direction:column; gap:1rem;}
+        label {margin-bottom:0.3rem;}
+        input[type="text"], input[type="email"], input[type="number"] {padding:0.5rem; border-radius:6px; border:1px solid #ccd;}
+        select {padding:0.5rem; border-radius:6px; border:1px solid #ccd;}
+        .pay-btn {background:linear-gradient(90deg,#2388ff,#34d1bf); color:#fff; border:none; padding:0.7rem; border-radius:8px; font-size:1rem; cursor:pointer; font-weight:bold;}
+        .pay-btn:hover{background:#34d1bf;}
+        .animated-img {width:100%; margin-bottom:1.2rem; border-radius:10px; animation:bounce 2.5s infinite;}
+        @keyframes bounce {0%,100%{transform:translateY(0);}50%{transform:translateY(-8px);}}
+        footer {background:#2388ff; color:#fff; text-align:center; padding:1rem;}
+    </style>
+    <script>
+        window.onload = function() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const product = urlParams.get('product');
+            if(product) {
+                document.getElementById('package').value = product;
+            }
+        }
+        function handleSubmit(event) {
+            event.preventDefault();
+            location.href = "thankyou.html";
+        }
+    </script>
 </head>
 <body>
-
-<header>
-<h1>Travel Packages</h1>
-<nav>
-<a href="index.html">Home</a>
-<a href="places.html">Best Places</a>
-<a href="packages.html">Packages</a>
-</nav>
-</header>
-
-<div class="section">
-<h2>Our Best-Selling Karnataka Trips</h2>
-</div>
-
-<div class="grid">
-<div class="card">
-<img src="https://images.unsplash.com/photo-1593697904942-8f24c85ec6ef?auto=format&fit=crop&w=800&q=60">
-<h3>Mysore + Coorg (3 Days)</h3>
-<p class="price">₹8,499</p>
-<a href="thankyou.html" class="btn">Book Now</a>
-</div>
-
-<div class="card">
-<img src="https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?auto=format&fit=crop&w=800&q=60">
-<h3>Hampi Heritage Tour (2 Days)</h3>
-<p class="price">₹6,999</p>
-<a href="thankyou.html" class="btn">Book Now</a>
-</div>
-
-<div class="card">
-<img src="https://images.unsplash.com/photo-1626870196939-4b3bdf846dcd?auto=format&fit=crop&w=800&q=60">
-<h3>Jog Falls + Gokarna (4 Days)</h3>
-<p class="price">₹12,999</p>
-<a href="thankyou.html" class="btn">Book Now</a>
-</div>
-</div>
-
-<footer>© 2025 Explore Karnataka</footer>
-
+    <header class="animate__animated animate__fadeInDown">
+        <h1>Book Your Karnataka Tour</h1>
+        <p>Just fill your details & off you go!</p>
+    </header>
+    <main>
+        <div class="payment-box animate__animated animate__fadeInUp">
+            <img class="animated-img" src="https://images.unsplash.com/photo-1523966211575-eb4a2e73b0c5?auto=format&fit=crop&w=600&q=80" alt="Travel" />
+            <h2>Payment & Details</h2>
+            <form onsubmit="handleSubmit(event)">
+                <label for="name">Your Name</label>
+                <input type="text" id="name" required>
+                <label for="email">Email Address</label>
+                <input type="email" id="email" required>
+                <label for="phone">Contact Number</label>
+                <input type="text" id="phone" required>
+                <label for="package">Select Package</label>
+                <select id="package" required>
+                    <option value="" disabled selected>Choose a package</option>
+                    <option value="mysore">Mysore Heritage</option>
+                    <option value="hampi">Hampi Explorer</option>
+                    <option value="halebidu">Halebidu Temple Trail</option>
+                    <option value="coorg">Coorg Escape</option>
+                    <option value="badami">Badami Historic Tour</option>
+                </select>
+                <label for="participants">No. of Participants</label>
+                <input type="number" id="participants" min="1" max="10" required>
+                <label for="date">Travel Date</label>
+                <input type="text" id="date" placeholder="DD/MM/YYYY" required>
+                <label for="payment">Payment Method</label>
+                <select id="payment" required>
+                    <option value="credit">Credit Card</option>
+                    <option value="debit">Debit Card</option>
+                    <option value="upi">UPI</option>
+                    <option value="netbanking">Net Banking</option>
+                </select>
+                <button class="pay-btn animate__animated animate__pulse" type="submit">Checkout & Book</button>
+            </form>
+        </div>
+    </main>
+    <footer>
+        &copy; 2025 Explore Karnataka | Secure Booking
+    </footer>
 </body>
 </html>
