--- a/index.html
+++ b/index.html
@@ -6,62 +6,150 @@
     <title>Explore Karnataka</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <style>
-        body { margin:0; font-family: 'Segoe UI', Arial, sans-serif; background: #f4fafc; color: #1a202c; }
-        header { background: linear-gradient(90deg, #2388ff, #34d1bf); padding: 2rem 1rem; text-align: center; }
-        header h1 { font-size: 3rem; color: #fff; margin-bottom: 0.5rem; }
-        header p { font-size: 1.2rem; color: #f4fafc; }
-        .places { display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; margin: 3rem 0; }
-        .place-card { background: #fff; border-radius: 12px; box-shadow: 0 4px 24px rgba(0,0,0,0.06); width: 320px; padding: 1.2rem; transition: transform 0.2s; }
-        .place-card:hover { transform: scale(1.03); }
-        .place-card img { width: 100%; border-radius: 10px; animation: pulse 2s infinite; }
-        .place-card h3 { margin: 1rem 0 0.5rem 0; color: #2388ff; }
-        .action-btn { 
-            background: linear-gradient(90deg, #2388ff, #34d1bf); 
-            color: #fff; border: none; font-size: 1rem; padding: 0.7rem 2rem;
-            border-radius: 8px; cursor: pointer; margin: 2rem auto 0 auto; display: block;
-            font-weight: bold; transition: background 0.2s;
+        body {
+            margin: 0;
+            min-height: 100vh;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            color: #efefff;
+            background: linear-gradient(180deg, #2232a9 0%, #194ba8 40%, #041349 100%);
+            background-image: url('images/kannadamate-cosmic.png'), url('images/stars-bg.png');
+            background-position: center, top;
+            background-size: cover, cover;
+            background-repeat: no-repeat, repeat;
         }
-        .action-btn:hover { background: #34d1bf; }
-        @media (max-width: 900px) {.places { flex-direction: column; align-items: center; }}
-        @keyframes pulse { 0% {box-shadow: 0 0 0 0 #34d1bf55;} 50% {box-shadow: 0 0 24px 4px #2388ff33;} 100% {box-shadow: 0 0 0 0 #34d1bf55;} }
-        footer {background:#2388ff; color: #fff; text-align:center; padding:1rem;}
+        header {
+            padding: 2.5rem 1.5rem;
+            text-align: center;
+            background: rgba(6,12,35,0.85);
+            border-bottom: 3px solid #3fd2db;
+            box-shadow: 0 8px 32px #0c146066;
+        }
+        header h1 {
+            font-size: 3.2rem;
+            color: #73d3f7;
+            letter-spacing: 2px;
+            text-shadow: 0 0 18px #3455e0;
+        }
+        header p {
+            font-size: 1.3rem;
+            color: #e6ebfa;
+            margin-top: 0.7rem;
+            margin-bottom: 0;
+        }
+        .places {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 2.5rem;
+            justify-content: center;
+            margin: 4rem 0 0 0;
+        }
+        .place-card {
+            background: rgba(21,40,95,0.93);
+            border-radius: 16px;
+            box-shadow: 0 6px 44px #5ba1fa38;
+            width: 330px;
+            padding: 1.3rem;
+            margin-bottom: 2rem;
+            transition: transform 0.27s;
+        }
+        .place-card:hover {
+            transform: scale(1.06) rotate(-1.5deg);
+            box-shadow: 0 13px 54px #9fd2e3b6;
+        }
+        .place-card img {
+            width: 100%;
+            border-radius: 12px;
+            margin-bottom: 1rem;
+            animation: pulse 2.5s infinite;
+            box-shadow: 0 4px 24px #51b9f088;
+        }
+        .place-card .place-title {
+            margin: 0.4rem 0 0.1rem 0;
+            color: #62e3fa;
+            font-size: 1.5rem;
+            letter-spacing: 1px;
+            text-shadow: 0 0 8px #2642a8;
+        }
+        .place-card p {
+            color: #e0eaf7;
+            font-size: 1rem;
+        }
+        .action-btn {
+            background: linear-gradient(90deg,#23aaff,#6832a8);
+            color: #fff;
+            border: none;
+            font-size: 1.1rem;
+            padding: 0.9rem 2rem;
+            border-radius: 12px;
+            cursor: pointer;
+            margin: 3rem auto 0 auto;
+            display: block;
+            font-weight: 600;
+            letter-spacing: 1px;
+            box-shadow: 0 2px 8px #4472e029;
+            transition: background 0.2s;
+        }
+        .action-btn:hover { background: #6832a8; }
+        @media (max-width: 900px) {
+            .places { flex-direction: column; align-items: center; }
+            .place-card { width: 94vw; }
+        }
+        @keyframes pulse {
+            0% { box-shadow: 0 0 0 0 #23aaff44; }
+            60% { box-shadow: 0 0 16px 8px #23aaff80; }
+            100% { box-shadow: 0 0 0 0 #23aaff44; }
+        }
+        footer {
+            background:#2642a8;
+            color: #e2f3fa;
+            text-align: center;
+            padding: 1.5rem;
+            margin-top: 5rem;
+            letter-spacing: 1px;
+        }
     </style>
 </head>
 <body>
     <header class="animate__animated animate__fadeInDown">
         <h1>Explore Karnataka</h1>
-        <p>Discover Heritage, History & Beauty across Karnataka’s iconic destinations. Your adventure starts here!</p>
+        <p>Discover the cosmic heritage and vibrant history of Karnataka’s iconic places. Your universe of adventure awaits!</p>
     </header>
     <section class="places">
-        <div class="place-card animate__animated animate__fadeInUp">
-            <img src="https://www.google.com/imgres?q=Karnataka%20tourist%20places%20Hampi%20beluru%20Mysore%20and%20other%20historical%20places%20images&imgurl=https%3A%2F%2Fwww.skysketchindia.com%2Fwp-content%2Fuploads%2F2025%2F08%2FMysore.webp&imgrefurl=https%3A%2F%2Fwww.skysketchindia.com%2Fhistorical-places-in-karnataka%2F&docid=iQkGbMclyjSDdM&tbnid=KjSXjcyxns_uxM&vet=12ahUKEwj__9jfx_6QAxXgd2wGHSXBCEw4ChAzegQIERAA..i&w=591&h=310&hcb=2&ved=2ahUKEwj__9jfx_6QAxXgd2wGHSXBCEw4ChAzegQIERAA" />
-            <h3>Mysore</h3>
-            <p>Grand palaces, vibrant Dasara festival, art and architecture. Experience the royal heritage.</p>
+        <!-- Update `src` with your animated/cosmic images -->
+        <div class="place-card animate__animated animate__zoomIn">
+            <img src="images/mysore-cosmic.gif" alt="Mysore Palace Cosmic" />
+            <div class="place-title">Mysore</div>
+            <p>Grand palaces, Dasara festivals, and cosmic architecture.</p>
         </div>
-        <div class="place-card animate__animated animate__fadeInUp">
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.indianpanorama.in%2Findia-tour-itinerary%2Fkarnataka-heritage-tour.php&psig=AOvVaw1gOOwlh6_499B_lAq7UMN5&ust=1763653572744000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKiC-4vI_pADFQAAAAAdAAAAABAE" />
-            <h3>Hampi</h3>
-            <p>Majestic boulder-strewn ruins, ancient temples, and stories of the Vijayanagara Empire.</p>
+        <div class="place-card animate__animated animate__zoomIn">
+            <img src="images/hampi-animated.gif" alt="Hampi Cosmic" />
+            <div class="place-title">Hampi</div>
+            <p>Boulder-strewn ruins, ancient temples, and astral vistas.</p>
         </div>
-        <div class="place-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1513185158878-8a2b5f4388d0?auto=format&fit=crop&w=600&q=80" alt="Halebidu Temple" />
-            <h3>Halebidu</h3>
-            <p>Marvel at the sculpted splendor of Hoysala architecture and rich inscriptions.</p>
+        <div class="place-card animate__animated animate__zoomIn">
+            <img src="images/halebidu-cosmic.gif" alt="Halebidu Cosmic" />
+            <div class="place-title">Halebidu</div>
+            <p>Sculpted Hoysala temples glowing with astral stories.</p>
         </div>
-        <div class="place-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1555685812-4b943f1b78fa?auto=format&fit=crop&w=600&q=80" alt="Coorg" />
-            <h3>Coorg</h3>
-            <p>Lush coffee plantations, waterfalls, and peaceful hills—a paradise for nature lovers.</p>
+        <div class="place-card animate__animated animate__zoomIn">
+            <img src="images/coorg-cosmic.gif" alt="Coorg Animated" />
+            <div class="place-title">Coorg</div>
+            <p>Cosmic hills, coffee aroma, waterfalls and blue galaxies.</p>
         </div>
-        <div class="place-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1587735018730-ed136311f287?auto=format&fit=crop&w=600&q=80" alt="Badami Caves"/>
-            <h3>Badami</h3>
-            <p>Unravel stories carved in sandstone caves and ancient forts.</p>
+        <div class="place-card animate__animated animate__zoomIn">
+            <img src="images/badami-cosmic.gif" alt="Badami Caves Cosmic"/>
+            <div class="place-title">Badami</div>
+            <p>Stone caves and cosmic god carvings await discovery.</p>
+        </div>
+        <div class="place-card animate__animated animate__zoomIn">
+            <img src="images/shivgange-cosmic.gif" alt="Shivagange Cosmic"/>
+            <div class="place-title">Shivagange</div>
+            <p>Starlit hilltop shrines and cosmic trekking paths.</p>
         </div>
     </section>
-    <button class="action-btn animate__animated animate__bounceIn" onclick="location.href='product.html';">Explore Packages</button>
+    <button class="action-btn animate__animated animate__pulse" onclick="location.href='product.html';">Explore Packages</button>
     <footer>
-        &copy; 2025 Explore Karnataka | Designed for Travelers
+        &copy; 2025 Explore Karnataka | Cosmic Heritage Tours
     </footer>
 </body>
 </html>
