--- a/product.html
+++ b/product.html
@@ -1,103 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KHPTRH75');</script>
-<!-- End Google Tag Manager -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tour Packages - Explore Karnataka</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <style>
-        body {margin:0; font-family:'Segoe UI', Arial, sans-serif; background:#eaf6f7;}
-        header {background:linear-gradient(90deg, #2388ff, #34d1bf); padding:1.5rem;text-align:center;}
-        header h2 {color:#fff; font-size:2.5rem;}
-        header p {color:#f4fafc;}
-        .package-list {display:flex; flex-wrap:wrap; gap:2rem; justify-content:center;margin:2rem;}
-        .package-card {background:#fff; border-radius:12px; box-shadow:0 4px 24px rgba(0,0,0,0.12); width:330px; padding:1.5rem; transition:.2s;}
-        .package-card:hover {transform:scale(1.04);}
-        .package-card img {width:100%; border-radius:10px; animation:zoomIn 2s;}
-        .package-card h3 {color:#34d1bf;}
-        .package-card ul {padding:0 0 0 1.2rem;}
-        .book-btn {background:linear-gradient(90deg,#2388ff,#34d1bf); color:#fff; border:none; font-size:1rem; padding:0.7rem 2rem; border-radius:8px; cursor:pointer; margin-top:1rem; font-weight:bold;}
-        .book-btn:hover {background:#34d1bf;}
-        @media (max-width:900px) {.package-list {flex-direction:column; align-items:center;}}
-        @keyframes zoomIn {0% {transform: scale(.92);} 50% {transform: scale(1.02);} 100% {transform: scale(1);}}
-        footer {background:#2388ff; color:#fff; text-align:center; padding:1rem;}
-    </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RWTSB1LS3E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RWTSB1LS3E');
+</script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dairy Farm - Products</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #e9f7e9;
+      color: #2f4f2f;
+    }
+    header {
+      background: #3fa43f;
+      padding: 20px;
+      text-align: center;
+      color: white;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    .section {
+      padding: 40px;
+      text-align: center;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 20px;
+    }
+    .item {
+      background: white;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: 0.3s;
+    }
+    .item:hover {
+      transform: scale(1.05);
+    }
+    .item img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+    }
+    .item h3 {
+      margin: 10px 0;
+    }
+    .price {
+      font-size: 18px;
+      color: #3fa43f;
+      margin-bottom: 15px;
+    }
+    .btn {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #3fa43f;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      margin-bottom: 15px;
+      transition: 0.3s;
+    }
+    .btn:hover { background: #2f7a2f; }
+    footer {
+      background: #2d652d;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHPTRH75"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-    <header class="animate__animated animate__fadeInDown">
-        <h2>Tour Packages</h2>
-        <p>Handpicked experiences, local guides, easy bookings!</p>
-    </header>
-    <section class="package-list">
-        <div class="package-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Mysore Heritage"/>
-            <h3>Mysore Heritage</h3>
-            <ul>
-                <li>Duration: 2 Days/1 Night</li>
-                <li>Includes: Palace, Chamundi Hills, Brindavan Gardens</li>
-                <li>Transport: AC Coach</li>
-                <li>Starting at: ₹6,500</li>
-            </ul>
-            <button class="book-btn" onclick="location.href='https://6920110493ec5cc10c37a4c4--visionary-macaron-3e2e2c.netlify.app/payment.html?product=hampi?product=mysore';">Book Now</button>
-        </div>
-        <div class="package-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Hampi Explorer"/>
-            <h3>Hampi Explorer</h3>
-            <ul>
-                <li>Duration: 3 Days/2 Nights</li>
-                <li>Includes: Ruins, Virupaksha Temple, River Safari</li>
-                <li>Transport: Train + Local Jeep</li>
-                <li>Starting at: ₹8,000</li>
-            </ul>
-            <button class="book-btn" onclick="location.href='payment.html?product=hampi';">Book Now</button>
-        </div>
-        <div class="package-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1513185158878-8a2b5f4388d0?auto=format&fit=crop&w=600&q=80" alt="Halebidu Temple Trail"/>
-            <h3>Halebidu Temple Trail</h3>
-            <ul>
-                <li>Duration: 1 Day</li>
-                <li>Includes: Halebidu, Belur, Coffee Shop Visit</li>
-                <li>Transport: Private Van</li>
-                <li>Starting at: ₹5,200</li>
-            </ul>
-            <button class="book-btn" onclick="location.href='payment.html?product=halebidu';">Book Now</button>
-        </div>
-        <div class="package-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1555685812-4b943f1b78fa?auto=format&fit=crop&w=600&q=80" alt="Coorg Escape"/>
-            <h3>Coorg Escape</h3>
-            <ul>
-                <li>Duration: 2 Days/2 Nights</li>
-                <li>Includes: Plantation Trek, Abbey Falls, Madikeri Fort</li>
-                <li>Transport: Sleeper Bus</li>
-                <li>Starting at: ₹7,500</li>
-            </ul>
-            <button class="book-btn" onclick="location.href='payment.html?product=coorg';">Book Now</button>
-        </div>
-        <div class="package-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1587735018730-ed136311f287?auto=format&fit=crop&w=600&q=80" alt="Badami Historic Tour"/>
-            <h3>Badami Historic Tour</h3>
-            <ul>
-                <li>Duration: 2 Days</li>
-                <li>Includes: Caves, Pattadakal, Aihole</li>
-                <li>Transport: AC Coach</li>
-                <li>Starting at: ₹6,300</li>
-            </ul>
-            <button class="book-btn" onclick="location.href='payment.html?product=badami';">Book Now</button>
-        </div>
-    </section>
-    <footer>
-        &copy; 2025 Explore Karnataka | All Rights Reserved
-    </footer>
+  <header>Dairy Farm - Products</header>
+
+  <section class="section">
+    <h2>Our Dairy Products</h2>
+    <div class="grid">
+
+      <div class="item">
+        <img src="https://images.unsplash.com/photo-1580910051074-3af719a8a3a2" />
+        <h3>Fresh Cow Milk</h3>
+        <div class="price">₹50 / Litre</div>
+        <a href="payment.html" class="btn">Buy Now</a>
+      </div>
+
+      <div class="item">
+        <img src="https://images.unsplash.com/photo-1600180758895-62c8f6c717af" />
+        <h3>Pure Desi Ghee</h3>
+        <div class="price">₹750 / Kg</div>
+        <a href="payment.html" class="btn">Buy Now</a>
+      </div>
+
+      <div class="item">
+        <img src="https://images.unsplash.com/photo-1582819509237-dace1fc5a1aa" />
+        <h3>Organic Butter</h3>
+        <div class="price">₹420 / Kg</div>
+        <a href="payment.html" class="btn">Buy Now</a>
+      </div>
+
+      <div class="item">
+        <img src="https://images.unsplash.com/photo-1560807707-8cc77767d783" />
+        <h3>Curd</h3>
+        <div class="price">₹60 / Kg</div>
+        <a href="payment.html" class="btn">Buy Now</a>
+      </div>
+
+      <div class="item">
+        <img src="https://images.unsplash.com/photo-1601004890684-d8cbf643f5f2" />
+        <h3>Paneer (Cottage Cheese)</h3>
+        <div class="price">₹280 / Kg</div>
+        <a href="payment.html" class="btn">Buy Now</a>
+      </div>
+
+      <div class="item">
+        <img src="https://images.unsplash.com/photo-1508737027454-e6454ef45afd" />
+        <h3>Cheese</h3>
+        <div class="price">₹350 / Kg</div>
+        <a href="payment.html" class="btn">Buy Now</a>
+      </div>
+
+    </div>
+  </section>
+
+  <footer>
+    © 2025 Dairy Farm Fresh. All Rights Reserved.
+  </footer>
+
 </body>
 </html>
