--- a/payment.html
+++ b/payment.html
@@ -1,93 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KHPTRH75');</script>
-<!-- End Google Tag Manager -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Your Trip - Explore Karnataka</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <style>
-        body {background: #f8fbfe; font-family:'Segoe UI', Arial, sans-serif;}
-        header {background:linear-gradient(90deg,#2388ff,#34d1bf);text-align:center; padding:2rem; color:#fff;}
-        main {display:flex;justify-content:center;}
-        .payment-box {background:#fff; border-radius:16px; box-shadow:0 4px 24px rgba(0,0,0,0.10); padding:2rem; max-width:480px; margin:2rem;}
-        h2 {color:#2388ff;}
-        form {display:flex; flex-direction:column; gap:1rem;}
-        label {margin-bottom:0.3rem;}
-        input[type="text"], input[type="email"], input[type="number"] {padding:0.5rem; border-radius:6px; border:1px solid #ccd;}
-        select {padding:0.5rem; border-radius:6px; border:1px solid #ccd;}
-        .pay-btn {background:linear-gradient(90deg,#2388ff,#34d1bf); color:#fff; border:none; padding:0.7rem; border-radius:8px; font-size:1rem; cursor:pointer; font-weight:bold;}
-        .pay-btn:hover{background:#34d1bf;}
-        .animated-img {width:100%; margin-bottom:1.2rem; border-radius:10px; animation:bounce 2.5s infinite;}
-        @keyframes bounce {0%,100%{transform:translateY(0);}50%{transform:translateY(-8px);}}
-        footer {background:#2388ff; color:#fff; text-align:center; padding:1rem;}
-    </style>
-    <script>
-        window.onload = function() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const product = urlParams.get('product');
-            if(product) {
-                document.getElementById('package').value = product;
-            }
-        }
-        function handleSubmit(event) {
-            event.preventDefault();
-            location.href = "thankyou.html";
-        }
-    </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RWTSB1LS3E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RWTSB1LS3E');
+</script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dairy Farm - Payment</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #e9f7e9;
+      color: #2f4f2f;
+    }
+    header {
+      background: #3fa43f;
+      padding: 20px;
+      text-align: center;
+      color: white;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    .container {
+      max-width: 600px;
+      margin: 40px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    label {
+      font-size: 16px;
+      font-weight: bold;
+    }
+    input, select {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: 1px solid #bbb;
+      font-size: 16px;
+    }
+    .btn {
+      width: 100%;
+      padding: 14px;
+      background: #3fa43f;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+      margin-top: 10px;
+      transition: 0.3s;
+    }
+    .btn:hover { background: #2f7a2f; }
+    footer {
+      background: #2d652d;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHPTRH75"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-    <header class="animate__animated animate__fadeInDown">
-        <h1>Book Your Karnataka Tour</h1>
-        <p>Just fill your details & off you go!</p>
-    </header>
-    <main>
-        <div class="payment-box animate__animated animate__fadeInUp">
-            <img class="animated-img" src="https://images.unsplash.com/photo-1523966211575-eb4a2e73b0c5?auto=format&fit=crop&w=600&q=80" alt="Travel" />
-            <h2>Payment & Details</h2>
-            <form onsubmit="handleSubmit(event)">
-                <label for="name">Your Name</label>
-                <input type="text" id="name" required>
-                <label for="email">Email Address</label>
-                <input type="email" id="email" required>
-                <label for="phone">Contact Number</label>
-                <input type="text" id="phone" required>
-                <label for="package">Select Package</label>
-                <select id="package" required>
-                    <option value="" disabled selected>Choose a package</option>
-                    <option value="mysore">Mysore Heritage</option>
-                    <option value="hampi">Hampi Explorer</option>
-                    <option value="halebidu">Halebidu Temple Trail</option>
-                    <option value="coorg">Coorg Escape</option>
-                    <option value="badami">Badami Historic Tour</option>
-                </select>
-                <label for="participants">No. of Participants</label>
-                <input type="number" id="participants" min="1" max="10" required>
-                <label for="date">Travel Date</label>
-                <input type="text" id="date" placeholder="DD/MM/YYYY" required>
-                <label for="payment">Payment Method</label>
-                <select id="payment" required>
-                    <option value="credit">Credit Card</option>
-                    <option value="debit">Debit Card</option>
-                    <option value="upi">UPI</option>
-                    <option value="netbanking">Net Banking</option>
-                </select>
-                <button class="pay-btn animate__animated animate__pulse" type="submit">Checkout & Book</button>
-            </form>
-        </div>
-    </main>
-    <footer>
-        &copy; 2025 Explore Karnataka | Secure Booking
-    </footer>
+
+<header>Payment Page</header>
+
+<div class="container">
+  <h2>Complete Your Order</h2>
+
+  <form action="thankyou.html">
+    <label>Full Name</label>
+    <input type="text" required placeholder="Enter your name">
+
+    <label>Phone Number</label>
+    <input type="text" required placeholder="Enter mobile number">
+
+    <label>Select Product</label>
+    <select required>
+      <option value="">Choose Product</option>
+      <option>Fresh Cow Milk - ₹50</option>
+      <option>Pure Ghee - ₹750</option>
+      <option>Organic Butter - ₹420</option>
+      <option>Curd - ₹60</option>
+      <option>Paneer - ₹280</option>
+      <option>Cheese - ₹350</option>
+    </select>
+
+    <label>Address</label>
+    <input type="text" required placeholder="Enter delivery address">
+
+    <label>Payment Method</label>
+    <select required>
+      <option value="">Choose payment method</option>
+      <option>Cash on Delivery</option>
+      <option>UPI</option>
+      <option>Card Payment</option>
+    </select>
+
+    <button class="btn" type="submit">Proceed to Pay</button>
+  </form>
+</div>
+
+<footer>
+  © 2025 Dairy Farm Fresh. All Rights Reserved.
+</footer>
+
 </body>
 </html>
