--- a/thankyou.html
+++ b/thankyou.html
@@ -1,68 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KHPTRH75');</script>
-<!-- End Google Tag Manager -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You - Explore Karnataka</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <style>
-        body {background:#fffdfa; margin:0; font-family:'Segoe UI', Arial, sans-serif;}
-        .center-box {max-width:520px; margin:4rem auto; background:#fff; border-radius:16px; box-shadow:0 4px 24px rgba(0,0,0,0.08); padding:3rem; text-align:center;}
-        .center-box img {width:120px; margin-bottom:2rem; animation: tada 2s infinite;}
-        h1 {color:#34d1bf;}
-        p {margin:1.5rem 0; color:#444;}
-        .action-row {display:flex; gap:1.2rem; justify-content:center; margin-top:2rem;}
-        .back-btn, .share-btn {
-            background:linear-gradient(90deg,#2388ff,#34d1bf); color:#fff;
-            border:none; padding:0.7rem 2rem; border-radius:8px; cursor:pointer; font-size:1rem; font-weight:bold;
-        }
-        .back-btn:hover, .share-btn:hover {background:#34d1bf;}
-        @keyframes tada {0%{transform:scale(1);}10%,20%{transform:scale(0.95) rotate(-3deg);}30%,50%,70%,90%{transform:scale(1.05) rotate(3deg);}40%,60%,80%{transform:scale(1.05) rotate(-3deg);}100%{transform:scale(1) rotate(0);}
-        }
-        footer {background:#2388ff; color:#fff; text-align:center; padding:1rem; margin-top:6rem;}
-    </style>
-    <script>
-        function backToHome() {
-            location.href = "index.html";
-        }
-        function sharePage() {
-            if (navigator.share) {
-                navigator.share({
-                    title: 'Explore Karnataka Booking',
-                    text: 'I just booked an amazing Karnataka tour!',
-                    url: location.href
-                });
-            } else {
-                alert('Sharing not supported on this browser.');
-            }
-        }
-    </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RWTSB1LS3E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RWTSB1LS3E');
+</script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thank You</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #e9f7e9;
+      color: #2f4f2f;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
+    .box {
+      background: white;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+      animation: pop 1s ease;
+    }
+    @keyframes pop {
+      from { transform: scale(0.5); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+    .box img {
+      width: 120px;
+      margin-bottom: 20px;
+      animation: bounce 2s infinite;
+    }
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-12px); }
+    }
+    h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
+    a {
+      padding: 12px 25px;
+      background: #3fa43f;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      font-size: 18px;
+      transition: 0.3s;
+    }
+    a:hover { background: #2f7a2f; }
+  </style>
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHPTRH75"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-    <div class="center-box animate__animated animate__fadeInDown">
-        <img src="https://cdn-icons-png.flaticon.com/512/3807/3807953.png" alt="Success"/>
-        <h1>Thank You!</h1>
-        <p>Your booking is confirmed.<br>
-        Get ready to Explore Karnataka's heritage and wonders!<br>
-        We’ve sent you an email with your package details.</p>
-        <div class="action-row">
-            <button class="back-btn" onclick="backToHome()">Back to Home</button>
-            <button class="share-btn" onclick="sharePage()">Share</button>
-        </div>
-    </div>
-    <footer>
-        &copy; 2025 Explore Karnataka | Bon Voyage!
-    </footer>
+
+<div class="box">
+  <img src="https://cdn-icons-png.flaticon.com/512/845/845646.png" />
+  <h1>Thank You!</h1>
+  <p>Your order has been placed successfully.</p>
+  <a href="index.html">Return to Home</a>
+</div>
+
 </body>
 </html>
